# libsqrl

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  main.rs  sqrl_url.rs  storage.rs  util.rs
